syntax = "proto3";
package product_srv;

option go_package = "./;product_srv";

message Product{
    int64 id = 1;
    string name = 2;
    float price = 3;
    int64 num = 4;
    string unit = 5;
    string pic = 6;
    string desc = 7;
    string create_time = 8;
}

message ProductsRequest {
  int64 current_page = 1;
  int64 pagesize = 2;
}


message ProductsResponse {
  int64 code = 1;
  string msg = 2;
  repeated Product products =3;
  int64 total= 4;
  int64 current = 5;
  int64 page_size = 6;
}

message ProductAddRequest {
  string name = 1;
  float price = 2;
  int64 num = 3;
  string unit = 4;
  string pic = 5;
  string desc = 6;
  string create_time = 7;
}

message ProductAddResponse {
  int64 code = 1;
  string msg = 2;
}


message ProductEditRequest {
    int64 id = 1;
    string name = 2;
    float price = 3;
    int64 num = 4;
    string unit = 5;
    string pic = 6;
    string desc = 7;
    string create_time = 8;
}

message ProductEditResponse {
    int64 code = 1;
    string msg = 2;
}



message ProductDelRequest {
    int64 id = 1;
}

message ProductDelResponse {
    int64 code = 1;
    string msg = 2;
}


message ProductToEditRequest {
    int64 id = 1;
}
message ProductToEditResponse {
    int64 code = 1;
    string msg = 2;
    Product product = 3;
}

service Products{
  rpc ProductsList(ProductsRequest) returns (ProductsResponse){}  // 获取商品列表
  rpc ProductAdd(ProductAddRequest) returns (ProductAddResponse){}  // 添加商品
  rpc ProductDel(ProductDelRequest) returns (ProductDelResponse){}  // 删除商品
  rpc ProductToEdit(ProductToEditRequest) returns (ProductToEditResponse){}  // 获取商品详情
  rpc ProductDoEdit(ProductEditRequest) returns (ProductEditResponse){}  // 编辑商品

}