syntax = 'proto3';
package user_srv;

option go_package = "./;user_srv";

service AdminUser {
    rpc AdminUserLogin(AdminUserRequest) returns (AdminUserResponse){}
    rpc FrontUserList(FrontUsersRequest) returns (FrontUsersResponse){}
}



message FrontUsersRequest {
    int64 current_page = 1;
    int64 pagesize = 2;
}

message FrontUsersResponse {
    int64 code = 1;
    string msg = 2;
    repeated FrontUserMessage front_users =3;
    int64 total= 4;
    int64 current = 5;
    int64 page_size = 6;
}

message FrontUserMessage {
    int64 id = 1;
    string email = 2;
    string desc = 3;
    string status = 4;
    string create_time = 5;
}



message AdminUserRequest {
    string username = 1;
    string password = 2;
}


message AdminUserResponse {
    int64 code = 1;
    string msg = 2;
    string user_name = 3;
}